# Prototype

./: .gitignore  CMakeLists.txt  Data.h  DerivedData.cpp  DerivedData.h  DerivedElement.h  Element.cpp  Element.h  MessageHandler.cpp  PictureData.h  VideoData.cpp  VideoData.h  driver.cpp
Data/: PictureData.cpp
DataHandler/: DataHandler.cpp  DataHandler.h
Element/: DerivedElement.cpp  DerivedElement.h  Element.cpp  Element.h
MessageHandler/: MessageHandler.cpp  MessageHandler.h
